{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 347,
  "lineage": "596ec46a-7e32-2e6c-8c41-556e831eb3e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017c06dd742f7ed9c",
            "domain": "vpc",
            "id": "eipalloc-017c06dd742f7ed9c",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-192-199-161.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.192.199.161",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:924961350014:internet-gateway/igw-043c5176b605b115d",
            "id": "igw-043c5176b605b115d",
            "owner_id": "924961350014",
            "tags": {
              "EM_ECS_Endpoints_Cost": "Internet Gateway",
              "Name": "internet_gateway"
            },
            "tags_all": {
              "EM_ECS_Endpoints_Cost": "Internet Gateway",
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-094a2f25fdf1947d7"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:924961350014:loadbalancer/app/ecs-alb/1842364ff7ce156c",
            "arn_suffix": "app/ecs-alb/1842364ff7ce156c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-alb-410301164.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:924961350014:loadbalancer/app/ecs-alb/1842364ff7ce156c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02f8d86fc13fa9102"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0247806686225fe9e"
              },
              {
                "subnet_id": "subnet-03f8e3bb02740f2da"
              }
            ],
            "subnets": [
              "subnet-0247806686225fe9e",
              "subnet-03f8e3bb02740f2da"
            ],
            "tags": {
              "EM_ECS_Traffic_Cost": "Load Balancer",
              "Name": "ecs-alb"
            },
            "tags_all": {
              "EM_ECS_Traffic_Cost": "Load Balancer",
              "Name": "ecs-alb"
            },
            "vpc_id": "vpc-094a2f25fdf1947d7",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.ecs_sg",
            "aws_subnet.subnet",
            "aws_subnet.subnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_pub_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:924961350014:listener/app/ecs-alb/1842364ff7ce156c/74a9f6ee889fb864",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:924961350014:targetgroup/ecs-tg-camel-case-name/68aeb8d4482bcce1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:924961350014:listener/app/ecs-alb/1842364ff7ce156c/74a9f6ee889fb864",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:924961350014:loadbalancer/app/ecs-alb/1842364ff7ce156c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_alb",
            "aws_lb_target_group.ecs_tg_camelcase",
            "aws_security_group.ecs_sg",
            "aws_subnet.subnet",
            "aws_subnet.subnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "prime_numbers_checker_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:924961350014:targetgroup/ecs-tg-prime-numbers-checker/300ddfc1c83e493f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:924961350014:listener-rule/app/ecs-alb/1842364ff7ce156c/74a9f6ee889fb864/f33921b4824579f9",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/checkIsPrimeNumber",
                      "/getPrimeNumbers",
                      "/greeting"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:924961350014:listener-rule/app/ecs-alb/1842364ff7ce156c/74a9f6ee889fb864/f33921b4824579f9",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:924961350014:listener/app/ecs-alb/1842364ff7ce156c/74a9f6ee889fb864",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_alb",
            "aws_lb_listener.lb_pub_listener",
            "aws_lb_target_group.ecs_tg_camelcase",
            "aws_lb_target_group.prime_numbers_checker_tg",
            "aws_security_group.ecs_sg",
            "aws_subnet.subnet",
            "aws_subnet.subnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "springboot_greet_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:924961350014:targetgroup/ecs-tg-camel-case-name/68aeb8d4482bcce1",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:924961350014:listener-rule/app/ecs-alb/1842364ff7ce156c/74a9f6ee889fb864/4898f0f6def2284e",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/convertToCamelCase"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:924961350014:listener-rule/app/ecs-alb/1842364ff7ce156c/74a9f6ee889fb864/4898f0f6def2284e",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:924961350014:listener/app/ecs-alb/1842364ff7ce156c/74a9f6ee889fb864",
            "priority": 2,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_alb",
            "aws_lb_listener.lb_pub_listener",
            "aws_lb_target_group.ecs_tg_camelcase",
            "aws_security_group.ecs_sg",
            "aws_subnet.subnet",
            "aws_subnet.subnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_tg_camelcase",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:924961350014:targetgroup/ecs-tg-camel-case-name/68aeb8d4482bcce1",
            "arn_suffix": "targetgroup/ecs-tg-camel-case-name/68aeb8d4482bcce1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:924961350014:targetgroup/ecs-tg-camel-case-name/68aeb8d4482bcce1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-tg-camel-case-name",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-094a2f25fdf1947d7"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "prime_numbers_checker_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:924961350014:targetgroup/ecs-tg-prime-numbers-checker/300ddfc1c83e493f",
            "arn_suffix": "targetgroup/ecs-tg-prime-numbers-checker/300ddfc1c83e493f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:924961350014:targetgroup/ecs-tg-prime-numbers-checker/300ddfc1c83e493f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-tg-prime-numbers-checker",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-094a2f25fdf1947d7"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017c06dd742f7ed9c",
            "connectivity_type": "public",
            "id": "nat-0c75298d7e2b317fa",
            "network_interface_id": "eni-032245dbe0dd994a3",
            "private_ip": "10.0.1.64",
            "public_ip": "18.192.199.161",
            "subnet_id": "subnet-03f8e3bb02740f2da",
            "tags": {
              "Name": "nat_gateway"
            },
            "tags_all": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:924961350014:route-table/rtb-041bd7ddbdc6e99a6",
            "id": "rtb-041bd7ddbdc6e99a6",
            "owner_id": "924961350014",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c75298d7e2b317fa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-094a2f25fdf1947d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:924961350014:route-table/rtb-0114442fe153d2899",
            "id": "rtb-0114442fe153d2899",
            "owner_id": "924961350014",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043c5176b605b115d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-094a2f25fdf1947d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d92f4beecc241fc",
            "route_table_id": "rtb-041bd7ddbdc6e99a6",
            "subnet_id": "subnet-02006fd6ea83182ce"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet1",
            "aws_subnet.subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2c01969c49daea7",
            "route_table_id": "rtb-041bd7ddbdc6e99a6",
            "subnet_id": "subnet-0431b7e0656a8ea32"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet2",
            "aws_subnet.subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0471a24b4c4c70623",
            "route_table_id": "rtb-0114442fe153d2899",
            "subnet_id": "subnet-03f8e3bb02740f2da"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.route_table",
            "aws_subnet.subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0788b6911ff908485",
            "route_table_id": "rtb-0114442fe153d2899",
            "subnet_id": "subnet-0247806686225fe9e"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.route_table",
            "aws_subnet.subnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:924961350014:security-group/sg-02f8d86fc13fa9102",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-02f8d86fc13fa9102",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231124015654413300000002",
            "name_prefix": "terraform-",
            "owner_id": "924961350014",
            "revoke_rules_on_delete": false,
            "tags": {
              "EM_ECS_Overall_Cost": "Security Group",
              "Name": "ecs_sg"
            },
            "tags_all": {
              "EM_ECS_Overall_Cost": "Security Group",
              "Name": "ecs_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-094a2f25fdf1947d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:924961350014:security-group/sg-0c98e76b7e4c704cb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0c98e76b7e4c704cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02f8d86fc13fa9102"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20231124015655953100000003",
            "name_prefix": "terraform-",
            "owner_id": "924961350014",
            "revoke_rules_on_delete": false,
            "tags": {
              "EM_ECS_DB_Cost": "RDS Security Group",
              "Name": "rds_sg"
            },
            "tags_all": {
              "EM_ECS_DB_Cost": "RDS Security Group",
              "Name": "rds_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-094a2f25fdf1947d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:924961350014:subnet/subnet-02006fd6ea83182ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02006fd6ea83182ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924961350014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "EM_ECS_Overall_Cost": "Private Subnet",
              "Name": "private_subnet1"
            },
            "tags_all": {
              "EM_ECS_Overall_Cost": "Private Subnet",
              "Name": "private_subnet1"
            },
            "vpc_id": "vpc-094a2f25fdf1947d7"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:924961350014:subnet/subnet-0431b7e0656a8ea32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0431b7e0656a8ea32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924961350014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "EM_ECS_Overall_Cost": "Private Subnet",
              "Name": "private_subnet2"
            },
            "tags_all": {
              "EM_ECS_Overall_Cost": "Private Subnet",
              "Name": "private_subnet2"
            },
            "vpc_id": "vpc-094a2f25fdf1947d7"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:924961350014:subnet/subnet-0408d7f4a3146987b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0408d7f4a3146987b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924961350014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "EM_ECS_DB_Subnet_Cost": "RDS Subnet",
              "Name": "rds_subnet"
            },
            "tags_all": {
              "EM_ECS_DB_Subnet_Cost": "RDS Subnet",
              "Name": "rds_subnet"
            },
            "vpc_id": "vpc-094a2f25fdf1947d7"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:924961350014:subnet/subnet-004aba38f0d493375",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004aba38f0d493375",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924961350014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "EM_ECS_DB_Subnet_Cost": "RDS Subnet",
              "Name": "rds_subnet1"
            },
            "tags_all": {
              "EM_ECS_DB_Subnet_Cost": "RDS Subnet",
              "Name": "rds_subnet1"
            },
            "vpc_id": "vpc-094a2f25fdf1947d7"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:924961350014:subnet/subnet-03f8e3bb02740f2da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f8e3bb02740f2da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "924961350014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "EM_ECS_Overall_Cost": "Subnet",
              "Name": "subnet"
            },
            "tags_all": {
              "EM_ECS_Overall_Cost": "Subnet",
              "Name": "subnet"
            },
            "vpc_id": "vpc-094a2f25fdf1947d7"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:924961350014:subnet/subnet-0247806686225fe9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0247806686225fe9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "924961350014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "EM_ECS_Overall_Cost": "Subnet",
              "Name": "subnet2"
            },
            "tags_all": {
              "EM_ECS_Overall_Cost": "Subnet",
              "Name": "subnet2"
            },
            "vpc_id": "vpc-094a2f25fdf1947d7"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:924961350014:vpc/vpc-094a2f25fdf1947d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ce9f5f9a80e4c666",
            "default_route_table_id": "rtb-03e4fbacefea55470",
            "default_security_group_id": "sg-0c37958cba2893b98",
            "dhcp_options_id": "dopt-01206e54dc73498f5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-094a2f25fdf1947d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e4fbacefea55470",
            "owner_id": "924961350014",
            "tags": {
              "EM_ECS_Overall_Cost": "VPC",
              "Name": "em-thesis-ecs-cluster-vpc"
            },
            "tags_all": {
              "EM_ECS_Overall_Cost": "VPC",
              "Name": "em-thesis-ecs-cluster-vpc"
            }
          }
        }
      ]
    }
  ]
}